# houdini

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: Doxygen.cmake  HoudiniCompileOptions.cmake  StandardSettings.cmake  StaticAnalyzers.cmake
doc/: README.md  architecture.md
include/houdini/: estate.hpp
include/houdini/actor/: actor.hpp  actor_inc.hpp  context.hpp  driver_client.hpp
include/houdini/brokers/: broker_enums.hpp  brokers.hpp  message_broker.hpp
include/houdini/memory/: allocate_unique.hpp  tlsf_resource.hpp
include/houdini/sm/: README.md  sm.hpp
include/houdini/sm/backend/: algorithms.hpp  collect.hpp  collect_initial_states.hpp  dispatch_table.hpp  event.hpp  fill_dispatch_table.hpp  flatten.hpp  flatten_internal_transition_table.hpp  fwd_decl.hpp  index.hpp  index_defs.hpp  pseudo_states.hpp  remove_duplicates.hpp  resolve_state.hpp  resolve_transitions.hpp  state.hpp  state_machine.hpp  traits.hpp  transition.hpp  transition_table.hpp  transition_table_traits.hpp  type_list.hpp  variant_queue.hpp
include/houdini/sm/frontend/: base_state.hpp  behavior.hpp  static_stack.hpp  transition_dsl.hpp
include/houdini/util/: constants.hpp  enum_utils.hpp  fast_visit.hpp  hana.hpp  is_iterator.hpp  mp11.hpp  mp_flatten.hpp  static_typeid.hpp  type_name.hpp  types.hpp  unpack_tuple.hpp  utility_functions.hpp
test/: CMakeLists.txt
test/actions/: action_context.hpp  action_tests.cpp  state_tests.cpp
test/actor/: basic_actor_tests.cpp  test_actor_sm.hpp
test/multi_tu_actions/: action_context.hpp  multi_tu_action_tests.cpp  state_1.cpp  state_1.hpp  state_2.cpp  state_2.hpp
test/sm/: basic_sm.hpp  basic_transition_tests.cpp  collect_tests.cpp  direct_transition_tests.cpp  dispatch_table_tests.cpp  history_transition_tests.cpp  main.cpp  performance.cpp
test/utils/: enum_util_tests.cpp  utility_function_tests.cpp
test/yaml/: parse_configs.cpp
